--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,14 @@ dependencies = [
     "sentence-transformers>=2.3.0",
     "tiktoken>=0.5.2",
     "pypdf>=4.0.1",
-    "llama-index>=0.9.39",
+    "llama-index==0.9.48",
     "python-dotenv>=1.0.1",
-    "langchain-community>=0.0.16"
+    "langchain-community>=0.0.16",
+    "openpyxl>=3.1.2",
+    "docx2txt>=0.8",
+    "markdown>=3.5.2",
+    "unstructured[all-docs]>=0.12.4",
 ]
+
+[project.optional-dependencies]
+dev = ["pip-tools", "pytest", "httpx"]
