--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version-file: 'pyproject.toml'
+          cache: 'pip'
 
       - run: cp .env.example .env
       - run: make requirements-dev
