--- a/.github/workflows/release-dev.yaml
+++ b/.github/workflows/release-dev.yaml
@@ -24,14 +24,13 @@ jobs:
 
       - name: Push images
         run: |
-          make docker-build VERSION=$VERSION
-          make docker-push VERSION=$VERSION
+          make docker-release VERSION=$VERSION
 
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@f95763914e20e493bb5d45d63e30e17138f981d6 # v1.0.0
 
       - name: Build Zarf Package
-        run: zarf package create . --set=IMAGE_VERSION=$VERSION-amd64 --set=PACKAGE_VERSION=$VERSION --confirm
+        run: zarf package create . --set=PACKAGE_VERSION=$VERSION --confirm
 
       - name: Publish Zarf Package
         run: zarf package publish zarf-package-*.zst oci://ghcr.io/defenseunicorns/packages
