--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,18 +2,21 @@ name: Dev AMD64 Artifact
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*.*.*"
+      - dev
   workflow_dispatch:
 
-env:
-  VERSION: dev
-
 jobs:
-  push-release-amd64:
+  publish:
     runs-on: ai-ubuntu-big-boy-4-core
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Checkout Repo
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Version
+        id: get_version
+        uses: battila7/get-version-action@v2
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
@@ -24,14 +27,13 @@ jobs:
 
       - name: Push images
         run: |
-          make docker-build VERSION=$VERSION
-          make docker-push VERSION=$VERSION
+          make docker-release VERSION=${{ steps.get_version.outputs.version-without-v }}
 
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@f95763914e20e493bb5d45d63e30e17138f981d6 # v1.0.0
 
       - name: Build Zarf Package
-        run: zarf package create . --set=IMAGE_VERSION=$VERSION --set=PACKAGE_VERSION=$VERSION --confirm
+        run: zarf package create . --set=PACKAGE_VERSION=${{ steps.get_version.outputs.version-without-v }} --confirm
 
       - name: Publish Zarf Package
         run: zarf package publish zarf-package-*.zst oci://ghcr.io/defenseunicorns/packages
